# ollama-sermo

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: chat.rs  include.rs  main.rs
static/: index.html
