[package]
name = "sermo"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = "z"

[dependencies]
axum = "0.8.4"
bytes = "1.10.1"
hyper = "1.6.0"
include_dir = "0.7.4"
reqwest = { version = "0.12.23", features = ["json", "blocking", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tower = "0.5.2"
