[package]
name = "ollama-sermo"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = "z"
codegen-units = 1

[dependencies]
axum = "0.8.4"
bytes = "1.10.1"
reqwest = { version = "0.12.23", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "net"] }
tokio-stream = "0.1.17"
